--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ license = { file = "LICENSE" }
 requires-python = ">=3.7"
 dependencies = [
     "json",
-    "pandas",
+   "diagrams>= 0.22.0",
+    "colorama>=0.4.4"
+
 
 ]
 
