update description project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,7 @@ version = "0.1.0"
 authors = [
     { name = "Alejandro Velez", email = "wilmar.velezl@sophossolutions.com" },
 ]
-description = """ Continuous Documentation Tool - Documentation as Code Tool
-This package create reverse diagrams  based on your current state in your cloud environment.
-"""
+description = "Continuous Documentation Tool - Documentation as Code Tool - \n This package create reverse diagrams  based on your current state in your cloud environment"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.8"
