--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "reverse_diagrams"
-version = "0.1.3"
+version = "0.1.5"
 authors = [
     { name = "Alejandro Velez", email = "wilmar.velezl@sophossolutions.com" },
 ]
@@ -31,8 +31,8 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+"Homepage" = "https://github.com/velez94/reverse_diagrams"
+"Bug Tracker" = "https://github.com/velez94/reverse_diagrams/issues"
 
 [project.scripts]
 reverse_diagrams = "src.reverse_diagrams:main"
