--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "reverse_diagrams"
-version = "0.1.8"
+version = "0.1.9"
 authors = [
     { name = "Alejandro Velez", email = "wilmar.velezl@sophossolutions.com" },
 ]
@@ -19,7 +19,8 @@ dependencies = [
     "jsonschema>=3.2.0",
     "diagrams>= 0.22.0",
     "colorama>=0.4.4",
-    "boto3>=1.26.44"
+    "boto3>=1.26.44",
+    "emoji>=2.2.0"
 
 
 ]
