--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "reverse_diagrams"
-version = "0.2.4"
+version = "0.2.5"
 authors = [
     { name = "Alejandro Velez", email = "avelez@labvel.io" },
 ]
@@ -37,3 +37,6 @@ classifiers = [
 
 [project.scripts]
 reverse_diagrams = "src.reverse_diagrams:main"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
