--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,27 +7,25 @@ build-backend = "hatchling.build"
 
 [project]
 name = "reverse_diagrams"
-version = "0.2.5"
+version = "1.0.0"
 authors = [
     { name = "Alejandro Velez", email = "avelez@labvel.io" },
 ]
-description = "Continuous Documentation Tool - Documentation as Code Tool - \n This package create reverse diagrams  based on your current state in your cloud environment"
+description = "Continuous Documentation Tool - Documentation as Code Tool - \n This package create reverse diagrams  based on your current state in your cloud environment using diagrams library"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.8"
 dependencies = [
     "jsonschema>=3.2.0",
-    "diagrams>= 0.22.0",
+    "diagrams>= 0.23.4",
     "colorama>=0.4.4",
     "boto3>=1.26.44",
     "emoji>=2.2.0"
-
-
 ]
 
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache License, Version 2.0",
     "Operating System :: OS Independent",
 ]
 
