--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,6 @@
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-#[build-system]
-#requires = ["setuptools>=61.0"]
-#build-backend = "setuptools.build_meta"
 
 [project]
 name = "reverse_diagrams"
@@ -16,7 +13,7 @@ readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.8"
 dependencies = [
-    "jsonschema>=3.2.0",
+    "rich>=13.7.0",
     "diagrams>= 0.23.4",
     "colorama>=0.4.4",
     "boto3>=1.26.44",
