--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "reverse_diagrams"
-version = "1.2.2"
+version = "1.2.3"
 authors = [
     { name = "Alejandro Velez", email = "avelez@labvel.io" },
 ]
@@ -14,6 +14,7 @@ license = { file = "LICENSE" }
 requires-python = ">=3.8"
 dependencies = [
     "rich>=13.7.0",
+    "inquirer>=3.1.4",
     "diagrams>= 0.23.4",
     "colorama>=0.4.4",
     "boto3>=1.26.44",
