--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "reverse_diagrams"
-version = "1.3.2"
+version = "1.3.3"
 authors = [
     { name = "Alejandro Velez", email = "avelez@labvel.io" },
 ]
@@ -18,7 +18,8 @@ dependencies = [
     "diagrams>= 0.23.4",
     "colorama>=0.4.4",
     "boto3>=1.26.44",
-    "emoji>=2.2.0"
+    "emoji>=2.2.0",
+    "argcomplete>=3.4.0",
 ]
 
 classifiers = [
