--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "reverse_diagrams"
-version = "1.3.4"
+version = "1.3.5"
 authors = [
     { name = "Alejandro Velez", email = "avelez@labvel.io" },
 ]
@@ -13,18 +13,42 @@ readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.8"
 dependencies = [
-    "rich>=13.7.0",
-    "inquirer>=3.1.4",
-    "diagrams>= 0.23.4",
-    "colorama>=0.4.4",
-    "boto3>=1.26.44",
-    "emoji>=2.2.0",
-    "argcomplete>=3.4.0",
+    "rich>=14.2.0",
+    "inquirer>=3.4.1",
+    "diagrams>=0.25.1",
+    "colorama>=0.4.6",
+    "boto3>=1.42.19",
+    "emoji>=2.15.0",
+    "argcomplete>=3.6.3",
 ]
 
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "pytest-mock>=3.10.0",
+    "pytest-asyncio>=0.21.0",
+    "black>=23.0.0",
+    "isort>=5.12.0",
+    "mypy>=1.0.0",
+    "pre-commit>=3.0.0",
+    "flake8>=6.0.0",
+]
+test = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "pytest-mock>=3.10.0",
+    "pytest-asyncio>=0.21.0",
+    "moto>=4.2.0",  # AWS mocking
+    "responses>=0.23.0",  # HTTP mocking
+]
+plugins = [
+    "importlib-metadata>=4.0.0",  # Plugin discovery
 ]
 
 [project.urls]
