fix: Configure dynamic version loading from src/version.py
- Set version as dynamic in pyproject.toml
- Added hatch.version configuration to read from src/version.py
- Version is now single source of truth in src/version.py
- Prevents version mismatch between files

This ensures the version is always loaded from src/version.py
and doesn't need to be manually updated in multiple places.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "reverse_diagrams"
-version = "2.0.0"
+dynamic = ["version"]
 authors = [
     { name = "Alejandro Velez", email = "avelez@labvel.io" },
 ]
@@ -60,3 +60,6 @@ reverse_diagrams = "src.reverse_diagrams:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
+
+[tool.hatch.version]
+path = "src/version.py"
