feat: Add HTML report generation and organizations watch command (v2.1.0)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ test = [
     "pytest-cov>=4.0.0",
     "pytest-mock>=3.10.0",
     "pytest-asyncio>=0.21.0",
+    "hypothesis>=6.0.0",  # Property-based testing
     "moto>=4.2.0",  # AWS mocking
     "responses>=0.23.0",  # HTTP mocking
 ]
